[package]
name = "decrypt_file"
version = "0.1.0"
authors = ["Ivy Seo <ivy.rice.seo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
sodiumoxide = "0.2.5"
libsodium-sys = "0.2.5"

anyhow = "1.0.31"
base64 = "0.12.1"
libc = "0.2.71"

openssh-keys = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }



#AWS SDK for Rust:
rust-s3 = "0.8.0"

rusoto_core = "0.44.0"
rusoto_sqs = "0.44.0"
rusoto_s3 = "0.44.0"

tokio = { version = "0.2.21", features = ["macros"] }
futures = "0.3.5"

env_logger = "0.7.1"